# Projet-technologique

./: .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_ext.c  game_private.c  game_random.c  game_random.h  game_sdl.c  game_sdl.h  game_solve.c  game_test_albarut.c  game_test_herakotondra.c  game_test_pbui.c  game_text.c  game_tools.c  main.c  watermark
web/: demo.js  game.html  game.wasm  watermark
web/src/: game_tools.c
